--- a/src/usersBrowser/style/Footer.css
+++ b/src/usersBrowser/style/Footer.css
@@ -2,10 +2,10 @@
   background-color: #4abeff;
   color: white;
   padding: 70px 0;
+  border-radius: 10px;
 }
 
 .footerContent {
-  width: 1310px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -21,6 +21,7 @@
 .icons {
   display: flex;
   gap: 40px;
+  margin-top: 50px;
 }
 
 .footerBottom {
